Got the form workign with formingo, added some scripts

--- a/index.html
+++ b/index.html
@@ -4,4 +4,14 @@ crawlertitle: "Home"
 title: "Josh Bryant"
 summary: "main page"
 ---
-
+<div class="estimate-form-wrapper">
+  <div class="estimate-form">
+    <p class="estimate-form__text">Submit the form or give us a call to have one of our specialists contact you for your free estimate</p>
+    <form method="POST" action="https://www.formingo.co/submit/kaytal@gmail.com" target="_blank">
+      <input data-validation="required" type="text" name="name" placeholder="Name">
+      <input data-validation="email" type="email" name="email" placeholder="Email">
+      <input data-validation="required" type="phone" name="phone" placeholder="Phone">
+      <input type="submit" value="Get Free Estimate">
+    </form>
+  </div>
+</div>
