Fixed urls for last time

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ summary: "main page"
       <p class="service__text">Shops, Office Buildings, Commercial Buildings</p>
     </div>
     <div class="service agricultural">
+      {{site.url}}
       <img src="{{ "/assets/images/Barn.png" | prepend: site.baseurl | prepend: site.url }}" class="service__image" alt="Barns, Outbuildings and Agricultural" />
       <p class="service__text">Barns, Outbuildings, Stables, Agricultural Buildings</p>
     </div>
