--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@ summary: "main page"
   <h2>What we Do!</h2>
   <div class="services-wrapper">
     <div class="service residential">
-      <img src="{{ "/assets/images/House.png" | prepend: site.baseurl | prepend: site.url }}" class="service__image" alt="New or Remodeled Homes" />
+      <img src="{{ site.base_url }}/assets/images/House.png" class="service__image" alt="New or Remodeled Homes" />
       <p class="service__text">New or Remodeled Homes, Attic Upgrades, Crawl Spaces</p>
     </div>
     <div class="service commercial">
-      <img src="{{ "/assets/images/office.png" | prepend: site.baseurl | prepend: site.url }}" class="service__image" alt="Shops, Office Buildings, Commercial Buildings" />
+      <img src="{{ site.base_url }}/assets/images/office.png" class="service__image" alt="Shops, Office Buildings, Commercial Buildings" />
       <p class="service__text">Shops, Office Buildings, Commercial Buildings</p>
     </div>
     <div class="service agricultural">
-      {{site.url}}
-      <img src="{{ "/assets/images/Barn.png" | prepend: site.baseurl | prepend: site.url }}" class="service__image" alt="Barns, Outbuildings and Agricultural" />
+      <img src="{{ site.base_url }}/assets/images/Barn.png" class="service__image" alt="Barns, Outbuildings and Agricultural" />
       <p class="service__text">Barns, Outbuildings, Stables, Agricultural Buildings</p>
     </div>
   </div>
