Added footer copyright info and finished styling some of the interior content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@ summary: "main page"
     </div>
   </div>
 </div>
-<div class="how-and-why">
+<div class="who-we-serve container">
+  <h2>Who We Serve</h2>
+  <p class="text-center">We are proud members of the Greater Memphis, TN community.  Having lived here our whole lives we are invested in the Mid-South's Future.</p>
+  <p class="text-center">We serve <strong>Western Tennessee,</strong> <strong>Northern Mississippi</strong> and <strong>Eastern Arkansas.</strong></p>
+</div>
+<div class="how-and-why container">
   <h2>The How and Why!</h2>
   <div class="extra-info">
     <p>Everyone knows that when your space isn’t properly insulated you are heating/cooling in excess.  Therefore you are literally throwing money out the window or, more metaphorically, you are throwing money out through the gaps in your insulation.</p>
